Library untuk issue #3 (#10)
* add verify dummy and verify endpoint with bip39

* update package to add bip39

* test verify

* try to fix verify

* sebuah library untuk menyasar issue #3
